Refactorings to Parameter.